--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/crosshj/assistant#readme",
   "dependencies": {
+    "express": "^4.16.2",
     "node-gmail-api": "^0.6.1",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0"
