--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/crosshj/assistant#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "node-gmail-api": "^0.6.1",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0"
