--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.15.6",
     "node-gmail-api": "^0.6.1",
     "passport": "^0.4.0",
-    "passport-google-oauth": "^1.0.0"
+    "passport-google-oauth": "^1.0.0",
+    "simple-object-path": "^1.1.0"
   }
 }
