--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "googleapis": "^25.0.0",
     "lodash": "^4.17.5",
     "node-gmail-api": "^0.6.1",
     "passport": "^0.4.0",
