--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "node-gmail-api": "^0.6.1",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
+    "request": "^2.83.0",
     "simple-object-path": "^1.1.0"
   }
 }
