--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "passport-google-oauth": "^1.0.0",
     "request": "^2.83.0",
     "simple-object-path": "^1.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.14.12"
   }
 }
