--- a/auth/docker-compose.yml
+++ b/auth/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - ./:/home/harrison/repos/assistant/auth
     ports:
       - "3421:3421"
-    command: "node simple"
+    command: "node auth"
 networks:
   default:
     external:
