--- a/voice_recog/package.json
+++ b/voice_recog/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "nodemon index.js"
+    "watch": "nodemon index.js",
+    "test.sphinx": "nodemon ./converters/sphinx/example.js",
+    "test.google": "nodemon ./converters/google/example.js"
   },
   "author": "",
   "license": "ISC",
