voice recog: test trained model

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,5 @@ voice_recog/converters/sphinx/sphinxtrain/
 voice_recog/converters/sphinx/pocketsphinx/
 voice_recog/converters/sphinx/sphinxbase/
 voice_recog/converters/sphinx/training/accum/*
+voice_recog/converters/sphinx/training/6test.hyp
+voice_recog/converters/sphinx/training/en-70k-0.2.lm.bin
