voice_recog: server example

--- a/voice_recog/package.json
+++ b/voice_recog/package.json
@@ -20,5 +20,8 @@
   "dependencies": {
     "cmake-js": "5.3.1",
     "pocketsphinx": "5.0.7"
+  },
+  "nodemonConfig": {
+    "ignore": ["tmp/*"]
   }
 }
