--- a/auth/package.json
+++ b/auth/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "connect-redis": "^3.3.3",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.5",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "passport": "^0.4.0",
