--- a/auth/package.json
+++ b/auth/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "passport": "^0.4.0",
+    "passport-auth0": "^1.1.0",
     "passport-google-oauth": "^1.0.0"
   }
 }
