--- a/gmail/package.json
+++ b/gmail/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "watch": "nodemon index --watch ./",
     "watch.gmail": "nodemon ./test.email.js --watch ./",
     "watch.tasks": "nodemon ./test.tasks.js --watch ./",
     "test": "echo \"Error: no test specified\" && exit 1"
