--- a/.github/workflows/deploy-bookmarks.yml
+++ b/.github/workflows/deploy-bookmarks.yml
@@ -23,14 +23,14 @@ jobs:
       #     VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
       #     VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
-      - name: Add Environment Variables to Vercel
-        run: |
-          echo "${{ secrets.SUPABASE_URL }}" | npx vercel env add SUPABASE_URL production
-          echo "${{ secrets.SUPABASE_ANON_KEY }}" | npx vercel env add SUPABASE_ANON_KEY production
-        working-directory: ./bookmarks
-        env:
-          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+      # - name: Add Environment Variables to Vercel
+      #   run: |
+      #     echo "${{ secrets.SUPABASE_URL }}" | npx vercel env add SUPABASE_URL production
+      #     echo "${{ secrets.SUPABASE_ANON_KEY }}" | npx vercel env add SUPABASE_ANON_KEY production
+      #   working-directory: ./bookmarks
+      #   env:
+      #     VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+      #     VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
       # - name: Build Project Artifacts
       #   run: npx vercel build --prod
