--- a/.github/workflows/deploy-bookmarks.yml
+++ b/.github/workflows/deploy-bookmarks.yml
@@ -32,12 +32,12 @@ jobs:
       #     VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
       #     VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
-      # - name: Build Project Artifacts
-      #   run: npx vercel build --prod
-      #   working-directory: ./bookmarks
-      #   env:
-      #     VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-      #     VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+      - name: Build Project Artifacts
+        run: npx vercel build --prod
+        working-directory: ./bookmarks
+        env:
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
 
       - name: Deploy to Vercel
