--- a/.github/workflows/deploy-bookmarks.yml
+++ b/.github/workflows/deploy-bookmarks.yml
@@ -16,12 +16,12 @@ jobs:
         run: npm install
         working-directory: ./bookmarks
 
-      # - name: Pull Vercel Project Settings
-      #   run: npx vercel pull --yes --environment=production --token=${{ secrets.VERCEL_DEPLOY_TOKEN }}
-      #   working-directory: ./bookmarks
-      #   env:
-      #     VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-      #     VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+      - name: Pull Vercel Project Settings
+        run: npx vercel pull --yes --environment=production --token=${{ secrets.VERCEL_DEPLOY_TOKEN }}
+        working-directory: ./bookmarks
+        env:
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
       # - name: Add Environment Variables to Vercel
       #   run: |
