--- a/bookmarks/package.json
+++ b/bookmarks/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
     "moment": "^2.29.4",
+    "probe-image-size": "^7.2.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
