--- a/bookmarks/package.json
+++ b/bookmarks/package.json
@@ -1,29 +1,35 @@
 {
-  "name": "bookmarks",
-  "version": "1.0.0",
-  "description": "Pocket-like bookmarking system for saving web pages to read later",
-  "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "watch": "cross-env VERCEL_TELEMETRY_CONSENT=0 vercel dev --listen 4422",
-    "deploy": "cross-env VERCEL_TELEMETRY_CONSENT=0 vercel --prod",
-    "build": "echo 'No build step needed'"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@supabase/supabase-js": "^2.38.0",
-    "axios": "^1.6.0",
-    "cheerio": "^1.0.0-rc.12",
-    "moment": "^2.29.4",
-    "probe-image-size": "^7.2.3",
-    "uuid": "^9.0.1"
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.3",
-    "vercel": "^44.2.7"
-  },
-  "engines": {
-    "node": "18.x"
-  }
+    "name": "bookmarks",
+    "version": "1.0.0",
+    "description": "Pocket-like bookmarking system for saving web pages to read later",
+    "type": "module",
+    "main": "index.js",
+    "scripts": {
+        "watch": "cross-env VERCEL_TELEMETRY_CONSENT=0 vercel dev --listen 4422",
+        "deploy": "cross-env VERCEL_TELEMETRY_CONSENT=0 vercel --prod",
+        "build": "echo 'No build step needed'",
+        "test": "node --experimental-vm-modules node_modules/.bin/jest"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@supabase/supabase-js": "^2.38.0",
+        "axios": "^1.6.0",
+        "cheerio": "^1.0.0-rc.12",
+        "file-type": "^21.0.0",
+        "get-image-colors": "^4.0.1",
+        "moment": "^2.29.4",
+        "probe-image-size": "^7.2.3",
+        "sharp": "^0.34.2",
+        "uuid": "^9.0.1"
+    },
+    "devDependencies": {
+        "cross-env": "^7.0.3",
+        "dotenv": "^17.0.0",
+        "jest": "^30.0.3",
+        "vercel": "^44.2.7"
+    },
+    "engines": {
+        "node": "18.x"
+    }
 }
