fix for sharp module?

--- a/.github/workflows/deploy-bookmarks.yml
+++ b/.github/workflows/deploy-bookmarks.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Dependencies
-        run: npm install --include=optional
+        run: npm install --include=optional --os=linux --cpu=x64
         working-directory: ./bookmarks
 
       - name: Pull Vercel Project Settings
