--- a/bookmarks/package.json
+++ b/bookmarks/package.json
@@ -8,7 +8,8 @@
         "watch": "cross-env VERCEL_TELEMETRY_CONSENT=0 vercel dev --listen 4422",
         "deploy": "cross-env VERCEL_TELEMETRY_CONSENT=0 vercel --prod",
         "build": "echo 'No build step needed'",
-        "test": "node --experimental-vm-modules node_modules/.bin/jest"
+        "test": "node --experimental-vm-modules node_modules/.bin/jest",
+        "postinstall": "npm rebuild sharp"
     },
     "author": "",
     "license": "ISC",
