--- a/.github/workflows/deploy-bookmarks.yml
+++ b/.github/workflows/deploy-bookmarks.yml
@@ -12,16 +12,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Dependencies
-        run: npm install --include=optional --os=linux --cpu=x64
-        working-directory: ./bookmarks
+      # - name: Install Dependencies
+      #   run: npm install --include=optional --os=linux --cpu=x64
+      #   working-directory: ./bookmarks
 
-      - name: Pull Vercel Project Settings
-        run: npx vercel pull --yes --environment=production --token=${{ secrets.VERCEL_DEPLOY_TOKEN }}
-        working-directory: ./bookmarks
-        env:
-          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+      # - name: Pull Vercel Project Settings
+      #   run: npx vercel pull --yes --environment=production --token=${{ secrets.VERCEL_DEPLOY_TOKEN }}
+      #   working-directory: ./bookmarks
+      #   env:
+      #     VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+      #     VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
       # - name: Add Environment Variables to Vercel
       #   run: |
@@ -32,15 +32,16 @@ jobs:
       #     VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
       #     VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
-      - name: Build Project Artifacts
-        run: npx vercel build --prod
-        working-directory: ./bookmarks
-        env:
-          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+      # - name: Build Project Artifacts
+      #   run: npx vercel build --prod
+      #   working-directory: ./bookmarks
+      #   env:
+      #     VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+      #     VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
       - name: Deploy to Vercel
-        run: npx vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_DEPLOY_TOKEN }}
+        # run: npx vercel deploy --prebuilt --prod --token=${{ secrets.VERCEL_DEPLOY_TOKEN }}
+        run: npx vercel deploy --prod --token=${{ secrets.VERCEL_DEPLOY_TOKEN }}
         working-directory: ./bookmarks
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
